# Embedded-Device-Configurator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build and test.yml  Ubuntu build and test.yml  macos-10-clang.yml  macos-latest-clang.yml  ubuntu-latest-clang.yml  ubuntu-latest-gcc.yml  ubuntu.yml
interface/: CMakeLists.txt
interface/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol_table_item_model.cpp  protocol_table_item_model.h
protocol/: CMakeLists.txt
protocol/include/: protocol.h
protocol/include/protocol/: data_entry.h  data_types.h  protocol.h
protocol/src/: data_entry.cpp  data_types.cpp  protocol.cpp
protocol/tests/: CMakeLists.txt  protocol.test.cpp  protocol.test.datastruct.h  protocol_configured.test.cpp  protocol_configured_raw_to_parsed.test.cpp  test.cpp
serial/: CMakeLists.txt
serial/include/serial/: serial.h
serial/tests/: CMakeLists.txt
src/: main.cpp
